# ThreadsResearch

./: README.md
QThreadProgram/: CMakeLists.txt
QThreadProgram/include/: calculo.h  mainwindow.h
QThreadProgram/src/: CMakeLists.txt  calculo.cpp  canvas.cpp  mainwindow.cpp
StdThreadProgram/: CMakeLists.txt  conanfile.py  fragmentshader.glsl  resources.qrc  vertexshader.glsl
StdThreadProgram/include/: canvas.h  mainwindow.h
StdThreadProgram/src/: CMakeLists.txt  calculo.cpp  mainwindow.cpp  mainwindow.ui
